--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazing Events | Home</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Amazing Events | Contact</title>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
-<body class="bg-dark.bg-gradient">
+<body>
     <header>
         <!-- Navigatiob Bar -->
-        <nav class="navbar navbar-expand-lg bg-dark.bg-gradient">
+        <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/img/LogoAmazingEvents.png" alt="Logo" height="24"
+                    <img src="../img/LogoAmazingEvents.png" alt="Logo" height="24"
                         class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -29,22 +29,19 @@
                     <ul class="navbar-nav">
                         <li class="nav-item p-2">
                             <!--<a class="nav-link active" aria-current="page" href="#">Home</a>-->
-                            <a href="#" class="btn btn-secondary active" aria-current="page">Home</a>
+                            <a href="../../index.html" class="btn btn-secondary" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/upcomingEvents.html">Upcoming Events</a>
+                            <a class="btn btn-secondary" href="./upcomingEvents.html">Upcoming Events</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/pastEvents.html">Past Events</a>
+                            <a class="btn btn-secondary" href="./pastEvents.html">Past Events</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/contact.html">Contact</a>
+                            <a class="btn btn-secondary active" href="#">Contact</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/stats.html">Stats</a>
-                        </li>
-                        <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/details.html">Details</a>
+                            <a class="btn btn-secondary" href="./stats.html">Stats</a>
                         </li>
                     </ul>
                 </div>
@@ -52,13 +49,11 @@
         </nav>
 
         <!-- Carousel-->
-
-
         <div class="bd-example">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
 
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
+                    <div class="carousel-item" data-bs-interval="2000">
                         <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Primer slide"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -79,7 +74,7 @@
                         </svg>
 
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" data-bs-interval="2000">
                         <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Tercer slide"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -90,7 +85,7 @@
                         </svg>
 
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item active  data-bs-interval=" 5000">
                         <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Cuarto slide"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -100,7 +95,7 @@
                         </svg>
 
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" data-bs-interval="2000">
                         <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Quinto slide"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -131,91 +126,24 @@
 
     <main>
 
-        <!-- Selection bar -->
+        <!-- Formulario Contacto -->
+        <div class="container g-2">
+            <form class="row  justify-content-center">
 
-        <div class="container-fluid ccards row  g-0 justify-content-end ">
-
-            <div class="check  col m-3 pt-1 justify-content-center">
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Category</label>
+                <div class="m-3 bg-body-secondary col-7">
+                    <label for="nameInput" class="form-label">Name</label>
+                    <input type="text" class="form-control mb-2" id="nameInput" >
                 </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                    <label class="form-check-label" for="inlineCheckbox2">Category</label>
+                <div class="m-3 bg-body-secondary col-7">
+                    <label for="emailInput" class="form-label">Email</label>
+                    <input type="email" class="form-control mb-2" id="emailInput">
                 </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                    <label class="form-check-label" for="inlineCheckbox3">Category</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                    <label class="form-check-label" for="inlineCheckbox4">Category</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-                    <label class="form-check-label" for="inlineCheckbox5">Category</label>
-                </div>
-            </div>
-            <form class="g-2 col-sm- col-md  justify-content-end">
-
-                <div class="input-group  mb-3">
-                    <input type="text" class="form-control" placeholder="Recipient's username"
-                        aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">
-                        <i class="bi bi-search"></i>
-                    </button>
+                <div class="m-3 bg-body-secondary col-7">
+                    <label for="msnInput" class="form-label">Message</label>
+                    <input type="text" class="form-control mb-2" id="msnInput">
                 </div>
             </form>
-
         </div>
-
-        <!-- Cards -->
-        <section class="cards">
-            <div class="card-group p-3 row justify-content-center row-cols-1">
-                <div class="card m-3 col rounded">
-                    <img src="./assets/img/Cinema.jpg" class="card-img-top rounded" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Titulo</h5>
-                        <p class="card-text">Texto Descriptivo</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Precio $10000</small>
-                    </div>
-                </div>
-                <div class="card m-3 col  rounded">
-                    <img src="./assets/img/Food_Fair.jpg" class="card-img-top rounded" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Titulo</h5>
-                        <p class="card-text">Texto Descriptivo</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-                <div class="card m-3 col rounded">
-                    <img src="./assets/img/Museum_Tour.jpg" class="card-img-top rounded" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Titulo</h5>
-                        <p class="card-text">Texto Descriptivo</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-
-                <div class="card m-3 col rounded">
-                    <img src="./assets/img/Marathon.jpg" class="card-img-top rounded" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Titulo</h5>
-                        <p class="card-text">Texto Descriptivo</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer>
@@ -231,9 +159,8 @@
                     <i class="bi bi-whatsapp rounded-2"></i>
                 </button>
             </div>
-
             <div>
-                <span class="p-2 align-middle fs-4">FE11-TM</span>
+                <span class="p-2 align-middle fs-4">Cohort</span>
             </div>
         </div>
 
