--- a/assets/pages/upcomingEvents.html
+++ b/assets/pages/upcomingEvents.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazing Events | Home</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Amazing Events | Upcoming Events</title>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
-<body class="bg-dark.bg-gradient">
+<body>
     <header>
         <!-- Navigatiob Bar -->
-        <nav class="navbar navbar-expand-lg bg-dark.bg-gradient">
+        <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/img/LogoAmazingEvents.png" alt="Logo" height="24"
+                    <img src="../img/LogoAmazingEvents.png" alt="Logo" height="24"
                         class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -29,22 +29,19 @@
                     <ul class="navbar-nav">
                         <li class="nav-item p-2">
                             <!--<a class="nav-link active" aria-current="page" href="#">Home</a>-->
-                            <a href="#" class="btn btn-secondary active" aria-current="page">Home</a>
+                            <a href="/index.html" class="btn btn-secondary" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/upcomingEvents.html">Upcoming Events</a>
+                            <a class="btn btn-secondary active" href="#">Upcoming Events</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/pastEvents.html">Past Events</a>
+                            <a class="btn btn-secondary" href="./pastEvents.html">Past Events</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/contact.html">Contact</a>
+                            <a class="btn btn-secondary" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/stats.html">Stats</a>
-                        </li>
-                        <li class="nav-item p-2">
-                            <a class="btn btn-secondary" href="./assets/pages/details.html">Details</a>
+                            <a class="btn btn-secondary" href="./stats.html">Stats</a>
                         </li>
                     </ul>
                 </div>
@@ -52,13 +49,11 @@
         </nav>
 
         <!-- Carousel-->
-
-
         <div class="bd-example">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
 
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
+                    <div class="carousel-item" data-bs-interval="2000">
                         <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Primer slide"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -68,7 +63,7 @@
                         </svg>
 
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
+                    <div class="carousel-item active" data-bs-interval="8000">
                         <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Segundo slide"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -174,7 +169,7 @@
         <section class="cards">
             <div class="card-group p-3 row justify-content-center row-cols-1">
                 <div class="card m-3 col rounded">
-                    <img src="./assets/img/Cinema.jpg" class="card-img-top rounded" alt="...">
+                    <img src="../img/Cinema.jpg" class="card-img-top rounded" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Titulo</h5>
                         <p class="card-text">Texto Descriptivo</p>
@@ -184,7 +179,7 @@
                     </div>
                 </div>
                 <div class="card m-3 col  rounded">
-                    <img src="./assets/img/Food_Fair.jpg" class="card-img-top rounded" alt="...">
+                    <img src="../img/Food_Fair.jpg" class="card-img-top rounded" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Titulo</h5>
                         <p class="card-text">Texto Descriptivo</p>
@@ -194,7 +189,7 @@
                     </div>
                 </div>
                 <div class="card m-3 col rounded">
-                    <img src="./assets/img/Museum_Tour.jpg" class="card-img-top rounded" alt="...">
+                    <img src="../img/Museum_Tour.jpg" class="card-img-top rounded" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Titulo</h5>
                         <p class="card-text">Texto Descriptivo</p>
@@ -205,7 +200,7 @@
                 </div>
 
                 <div class="card m-3 col rounded">
-                    <img src="./assets/img/Marathon.jpg" class="card-img-top rounded" alt="...">
+                    <img src="../img/Marathon.jpg" class="card-img-top rounded" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Titulo</h5>
                         <p class="card-text">Texto Descriptivo</p>
@@ -231,16 +226,17 @@
                     <i class="bi bi-whatsapp rounded-2"></i>
                 </button>
             </div>
-
             <div>
                 <span class="p-2 align-middle fs-4">FE11-TM</span>
             </div>
         </div>
 
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
 </body>
 
 
